parser.output
Terminals unused in grammar

    ELSE
    ELSIF
    ENDFOLD
    ENDIF
    FOLD
    IF
    LEFT
    RIGHT
    THEN


Grammar

    0 $accept: function $end

    1 function: function_header optional_variable body ';'

    2 function_header: FUNCTION IDENTIFIER RETURNS type ';'

    3 type: INTEGER
    4     | CHARACTER
    5     | REAL

    6 optional_variable: variable
    7                  | ε

    8 variable: IDENTIFIER ':' type IS statement ';'
    9         | IDENTIFIER ':' LIST OF type IS list ';'

   10 list: '(' expressions ')'

   11 expressions: expressions ',' expression
   12            | expression

   13 body: BEGIN_ statement_ END

   14 statement_: statement ';'
   15           | error ';'

   16 statement: expression
   17          | WHEN condition ',' expression ':' expression
   18          | SWITCH expression IS cases OTHERS ARROW statement ';' ENDSWITCH

   19 cases: cases case
   20      | ε

   21 case: CASE INT_LITERAL ARROW statement ';'

   22 condition: condition ANDOP relation
   23          | relation

   24 relation: '(' condition ')'
   25         | expression RELOP expression

   26 expression: expression ADDOP term
   27           | term

   28 term: term MULOP primary
   29     | term MODOP primary
   30     | primary

   31 primary: '(' expression ')'
   32        | INT_LITERAL
   33        | CHAR_LITERAL
   34        | REAL_LITERAL
   35        | IDENTIFIER '(' expression ')'
   36        | IDENTIFIER


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 10 24 31 35
    ')' (41) 10 24 31 35
    ',' (44) 11 17
    ':' (58) 8 9 17
    ';' (59) 1 2 8 9 14 15 18 21
    error (256) 15
    IDENTIFIER <iden> (258) 2 8 9 35 36
    INT_LITERAL <value> (259) 21 32
    CHAR_LITERAL <value> (260) 33
    REAL_LITERAL <value> (261) 34
    ADDOP <oper> (262) 26
    MULOP <oper> (263) 28
    MODOP <oper> (264) 29
    ANDOP <oper> (265) 22
    RELOP <oper> (266) 25
    ARROW (267) 18 21
    BEGIN_ (268) 13
    CASE (269) 21
    CHARACTER (270) 4
    ELSE (271)
    ELSIF (272)
    END (273) 13
    ENDFOLD (274)
    ENDIF (275)
    ENDSWITCH (276) 18
    FOLD (277)
    FUNCTION (278) 2
    IF (279)
    INTEGER (280) 3
    IS (281) 8 9 18
    LEFT (282)
    LIST (283) 9
    OF (284) 9
    OTHERS (285) 18
    REAL (286) 5
    RETURNS (287) 2
    RIGHT (288)
    SWITCH (289) 18
    THEN (290)
    WHEN (291) 17


Nonterminals, with rules where they appear

    $accept (42)
        on left: 0
    function (43)
        on left: 1
        on right: 0
    function_header (44)
        on left: 2
        on right: 1
    type (45)
        on left: 3 4 5
        on right: 2 8 9
    optional_variable (46)
        on left: 6 7
        on right: 1
    variable (47)
        on left: 8 9
        on right: 6
    list <list> (48)
        on left: 10
        on right: 9
    expressions <list> (49)
        on left: 11 12
        on right: 10 11
    body <value> (50)
        on left: 13
        on right: 1
    statement_ <value> (51)
        on left: 14 15
        on right: 13
    statement <value> (52)
        on left: 16 17 18
        on right: 8 14 18 21
    cases <value> (53)
        on left: 19 20
        on right: 18 19
    case <value> (54)
        on left: 21
        on right: 19
    condition <value> (55)
        on left: 22 23
        on right: 17 22 24
    relation <value> (56)
        on left: 24 25
        on right: 22 23
    expression <value> (57)
        on left: 26 27
        on right: 11 12 16 17 18 25 26 31 35
    term <value> (58)
        on left: 28 29 30
        on right: 26 27 28 29
    primary <value> (59)
        on left: 31 32 33 34 35 36
        on right: 28 29 30


State 0

    0 $accept: • function $end

    FUNCTION  shift, and go to state 1

    function         go to state 2
    function_header  go to state 3


State 1

    2 function_header: FUNCTION • IDENTIFIER RETURNS type ';'

    IDENTIFIER  shift, and go to state 4


State 2

    0 $accept: function • $end

    $end  shift, and go to state 5


State 3

    1 function: function_header • optional_variable body ';'

    IDENTIFIER  shift, and go to state 6

    $default  reduce using rule 7 (optional_variable)

    optional_variable  go to state 7
    variable           go to state 8


State 4

    2 function_header: FUNCTION IDENTIFIER • RETURNS type ';'

    RETURNS  shift, and go to state 9


State 5

    0 $accept: function $end •

    $default  accept


State 6

    8 variable: IDENTIFIER • ':' type IS statement ';'
    9         | IDENTIFIER • ':' LIST OF type IS list ';'

    ':'  shift, and go to state 10


State 7

    1 function: function_header optional_variable • body ';'

    BEGIN_  shift, and go to state 11

    body  go to state 12


State 8

    6 optional_variable: variable •

    $default  reduce using rule 6 (optional_variable)


State 9

    2 function_header: FUNCTION IDENTIFIER RETURNS • type ';'

    CHARACTER  shift, and go to state 13
    INTEGER    shift, and go to state 14
    REAL       shift, and go to state 15

    type  go to state 16


State 10

    8 variable: IDENTIFIER ':' • type IS statement ';'
    9         | IDENTIFIER ':' • LIST OF type IS list ';'

    CHARACTER  shift, and go to state 13
    INTEGER    shift, and go to state 14
    LIST       shift, and go to state 17
    REAL       shift, and go to state 15

    type  go to state 18


State 11

   13 body: BEGIN_ • statement_ END

    error         shift, and go to state 19
    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    CHAR_LITERAL  shift, and go to state 22
    REAL_LITERAL  shift, and go to state 23
    SWITCH        shift, and go to state 24
    WHEN          shift, and go to state 25
    '('           shift, and go to state 26

    statement_  go to state 27
    statement   go to state 28
    expression  go to state 29
    term        go to state 30
    primary     go to state 31


State 12

    1 function: function_header optional_variable body • ';'

    ';'  shift, and go to state 32


State 13

    4 type: CHARACTER •

    $default  reduce using rule 4 (type)


State 14

    3 type: INTEGER •

    $default  reduce using rule 3 (type)


State 15

    5 type: REAL •

    $default  reduce using rule 5 (type)


State 16

    2 function_header: FUNCTION IDENTIFIER RETURNS type • ';'

    ';'  shift, and go to state 33


State 17

    9 variable: IDENTIFIER ':' LIST • OF type IS list ';'

    OF  shift, and go to state 34


State 18

    8 variable: IDENTIFIER ':' type • IS statement ';'

    IS  shift, and go to state 35


State 19

   15 statement_: error • ';'

    ';'  shift, and go to state 36


State 20

   35 primary: IDENTIFIER • '(' expression ')'
   36        | IDENTIFIER •

    '('  shift, and go to state 37

    $default  reduce using rule 36 (primary)


State 21

   32 primary: INT_LITERAL •

    $default  reduce using rule 32 (primary)


State 22

   33 primary: CHAR_LITERAL •

    $default  reduce using rule 33 (primary)


State 23

   34 primary: REAL_LITERAL •

    $default  reduce using rule 34 (primary)


State 24

   18 statement: SWITCH • expression IS cases OTHERS ARROW statement ';' ENDSWITCH

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    CHAR_LITERAL  shift, and go to state 22
    REAL_LITERAL  shift, and go to state 23
    '('           shift, and go to state 26

    expression  go to state 38
    term        go to state 30
    primary     go to state 31


State 25

   17 statement: WHEN • condition ',' expression ':' expression

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    CHAR_LITERAL  shift, and go to state 22
    REAL_LITERAL  shift, and go to state 23
    '('           shift, and go to state 39

    condition   go to state 40
    relation    go to state 41
    expression  go to state 42
    term        go to state 30
    primary     go to state 31


State 26

   31 primary: '(' • expression ')'

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    CHAR_LITERAL  shift, and go to state 22
    REAL_LITERAL  shift, and go to state 23
    '('           shift, and go to state 26

    expression  go to state 43
    term        go to state 30
    primary     go to state 31


State 27

   13 body: BEGIN_ statement_ • END

    END  shift, and go to state 44


State 28

   14 statement_: statement • ';'

    ';'  shift, and go to state 45


State 29

   16 statement: expression •
   26 expression: expression • ADDOP term

    ADDOP  shift, and go to state 46

    $default  reduce using rule 16 (statement)


State 30

   27 expression: term •
   28 term: term • MULOP primary
   29     | term • MODOP primary

    MULOP  shift, and go to state 47
    MODOP  shift, and go to state 48

    $default  reduce using rule 27 (expression)


State 31

   30 term: primary •

    $default  reduce using rule 30 (term)


State 32

    1 function: function_header optional_variable body ';' •

    $default  reduce using rule 1 (function)


State 33

    2 function_header: FUNCTION IDENTIFIER RETURNS type ';' •

    $default  reduce using rule 2 (function_header)


State 34

    9 variable: IDENTIFIER ':' LIST OF • type IS list ';'

    CHARACTER  shift, and go to state 13
    INTEGER    shift, and go to state 14
    REAL       shift, and go to state 15

    type  go to state 49


State 35

    8 variable: IDENTIFIER ':' type IS • statement ';'

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    CHAR_LITERAL  shift, and go to state 22
    REAL_LITERAL  shift, and go to state 23
    SWITCH        shift, and go to state 24
    WHEN          shift, and go to state 25
    '('           shift, and go to state 26

    statement   go to state 50
    expression  go to state 29
    term        go to state 30
    primary     go to state 31


State 36

   15 statement_: error ';' •

    $default  reduce using rule 15 (statement_)


State 37

   35 primary: IDENTIFIER '(' • expression ')'

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    CHAR_LITERAL  shift, and go to state 22
    REAL_LITERAL  shift, and go to state 23
    '('           shift, and go to state 26

    expression  go to state 51
    term        go to state 30
    primary     go to state 31


State 38

   18 statement: SWITCH expression • IS cases OTHERS ARROW statement ';' ENDSWITCH
   26 expression: expression • ADDOP term

    ADDOP  shift, and go to state 46
    IS     shift, and go to state 52


State 39

   24 relation: '(' • condition ')'
   31 primary: '(' • expression ')'

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    CHAR_LITERAL  shift, and go to state 22
    REAL_LITERAL  shift, and go to state 23
    '('           shift, and go to state 39

    condition   go to state 53
    relation    go to state 41
    expression  go to state 54
    term        go to state 30
    primary     go to state 31


State 40

   17 statement: WHEN condition • ',' expression ':' expression
   22 condition: condition • ANDOP relation

    ANDOP  shift, and go to state 55
    ','    shift, and go to state 56


State 41

   23 condition: relation •

    $default  reduce using rule 23 (condition)


State 42

   25 relation: expression • RELOP expression
   26 expression: expression • ADDOP term

    ADDOP  shift, and go to state 46
    RELOP  shift, and go to state 57


State 43

   26 expression: expression • ADDOP term
   31 primary: '(' expression • ')'

    ADDOP  shift, and go to state 46
    ')'    shift, and go to state 58


State 44

   13 body: BEGIN_ statement_ END •

    $default  reduce using rule 13 (body)


State 45

   14 statement_: statement ';' •

    $default  reduce using rule 14 (statement_)


State 46

   26 expression: expression ADDOP • term

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    CHAR_LITERAL  shift, and go to state 22
    REAL_LITERAL  shift, and go to state 23
    '('           shift, and go to state 26

    term     go to state 59
    primary  go to state 31


State 47

   28 term: term MULOP • primary

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    CHAR_LITERAL  shift, and go to state 22
    REAL_LITERAL  shift, and go to state 23
    '('           shift, and go to state 26

    primary  go to state 60


State 48

   29 term: term MODOP • primary

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    CHAR_LITERAL  shift, and go to state 22
    REAL_LITERAL  shift, and go to state 23
    '('           shift, and go to state 26

    primary  go to state 61


State 49

    9 variable: IDENTIFIER ':' LIST OF type • IS list ';'

    IS  shift, and go to state 62


State 50

    8 variable: IDENTIFIER ':' type IS statement • ';'

    ';'  shift, and go to state 63


State 51

   26 expression: expression • ADDOP term
   35 primary: IDENTIFIER '(' expression • ')'

    ADDOP  shift, and go to state 46
    ')'    shift, and go to state 64


State 52

   18 statement: SWITCH expression IS • cases OTHERS ARROW statement ';' ENDSWITCH

    $default  reduce using rule 20 (cases)

    cases  go to state 65


State 53

   22 condition: condition • ANDOP relation
   24 relation: '(' condition • ')'

    ANDOP  shift, and go to state 55
    ')'    shift, and go to state 66


State 54

   25 relation: expression • RELOP expression
   26 expression: expression • ADDOP term
   31 primary: '(' expression • ')'

    ADDOP  shift, and go to state 46
    RELOP  shift, and go to state 57
    ')'    shift, and go to state 58


State 55

   22 condition: condition ANDOP • relation

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    CHAR_LITERAL  shift, and go to state 22
    REAL_LITERAL  shift, and go to state 23
    '('           shift, and go to state 39

    relation    go to state 67
    expression  go to state 42
    term        go to state 30
    primary     go to state 31


State 56

   17 statement: WHEN condition ',' • expression ':' expression

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    CHAR_LITERAL  shift, and go to state 22
    REAL_LITERAL  shift, and go to state 23
    '('           shift, and go to state 26

    expression  go to state 68
    term        go to state 30
    primary     go to state 31


State 57

   25 relation: expression RELOP • expression

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    CHAR_LITERAL  shift, and go to state 22
    REAL_LITERAL  shift, and go to state 23
    '('           shift, and go to state 26

    expression  go to state 69
    term        go to state 30
    primary     go to state 31


State 58

   31 primary: '(' expression ')' •

    $default  reduce using rule 31 (primary)


State 59

   26 expression: expression ADDOP term •
   28 term: term • MULOP primary
   29     | term • MODOP primary

    MULOP  shift, and go to state 47
    MODOP  shift, and go to state 48

    $default  reduce using rule 26 (expression)


State 60

   28 term: term MULOP primary •

    $default  reduce using rule 28 (term)


State 61

   29 term: term MODOP primary •

    $default  reduce using rule 29 (term)


State 62

    9 variable: IDENTIFIER ':' LIST OF type IS • list ';'

    '('  shift, and go to state 70

    list  go to state 71


State 63

    8 variable: IDENTIFIER ':' type IS statement ';' •

    $default  reduce using rule 8 (variable)


State 64

   35 primary: IDENTIFIER '(' expression ')' •

    $default  reduce using rule 35 (primary)


State 65

   18 statement: SWITCH expression IS cases • OTHERS ARROW statement ';' ENDSWITCH
   19 cases: cases • case

    CASE    shift, and go to state 72
    OTHERS  shift, and go to state 73

    case  go to state 74


State 66

   24 relation: '(' condition ')' •

    $default  reduce using rule 24 (relation)


State 67

   22 condition: condition ANDOP relation •

    $default  reduce using rule 22 (condition)


State 68

   17 statement: WHEN condition ',' expression • ':' expression
   26 expression: expression • ADDOP term

    ADDOP  shift, and go to state 46
    ':'    shift, and go to state 75


State 69

   25 relation: expression RELOP expression •
   26 expression: expression • ADDOP term

    ADDOP  shift, and go to state 46

    $default  reduce using rule 25 (relation)


State 70

   10 list: '(' • expressions ')'

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    CHAR_LITERAL  shift, and go to state 22
    REAL_LITERAL  shift, and go to state 23
    '('           shift, and go to state 26

    expressions  go to state 76
    expression   go to state 77
    term         go to state 30
    primary      go to state 31


State 71

    9 variable: IDENTIFIER ':' LIST OF type IS list • ';'

    ';'  shift, and go to state 78


State 72

   21 case: CASE • INT_LITERAL ARROW statement ';'

    INT_LITERAL  shift, and go to state 79


State 73

   18 statement: SWITCH expression IS cases OTHERS • ARROW statement ';' ENDSWITCH

    ARROW  shift, and go to state 80


State 74

   19 cases: cases case •

    $default  reduce using rule 19 (cases)


State 75

   17 statement: WHEN condition ',' expression ':' • expression

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    CHAR_LITERAL  shift, and go to state 22
    REAL_LITERAL  shift, and go to state 23
    '('           shift, and go to state 26

    expression  go to state 81
    term        go to state 30
    primary     go to state 31


State 76

   10 list: '(' expressions • ')'
   11 expressions: expressions • ',' expression

    ')'  shift, and go to state 82
    ','  shift, and go to state 83


State 77

   12 expressions: expression •
   26 expression: expression • ADDOP term

    ADDOP  shift, and go to state 46

    $default  reduce using rule 12 (expressions)


State 78

    9 variable: IDENTIFIER ':' LIST OF type IS list ';' •

    $default  reduce using rule 9 (variable)


State 79

   21 case: CASE INT_LITERAL • ARROW statement ';'

    ARROW  shift, and go to state 84


State 80

   18 statement: SWITCH expression IS cases OTHERS ARROW • statement ';' ENDSWITCH

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    CHAR_LITERAL  shift, and go to state 22
    REAL_LITERAL  shift, and go to state 23
    SWITCH        shift, and go to state 24
    WHEN          shift, and go to state 25
    '('           shift, and go to state 26

    statement   go to state 85
    expression  go to state 29
    term        go to state 30
    primary     go to state 31


State 81

   17 statement: WHEN condition ',' expression ':' expression •
   26 expression: expression • ADDOP term

    ADDOP  shift, and go to state 46

    $default  reduce using rule 17 (statement)


State 82

   10 list: '(' expressions ')' •

    $default  reduce using rule 10 (list)


State 83

   11 expressions: expressions ',' • expression

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    CHAR_LITERAL  shift, and go to state 22
    REAL_LITERAL  shift, and go to state 23
    '('           shift, and go to state 26

    expression  go to state 86
    term        go to state 30
    primary     go to state 31


State 84

   21 case: CASE INT_LITERAL ARROW • statement ';'

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    CHAR_LITERAL  shift, and go to state 22
    REAL_LITERAL  shift, and go to state 23
    SWITCH        shift, and go to state 24
    WHEN          shift, and go to state 25
    '('           shift, and go to state 26

    statement   go to state 87
    expression  go to state 29
    term        go to state 30
    primary     go to state 31


State 85

   18 statement: SWITCH expression IS cases OTHERS ARROW statement • ';' ENDSWITCH

    ';'  shift, and go to state 88


State 86

   11 expressions: expressions ',' expression •
   26 expression: expression • ADDOP term

    ADDOP  shift, and go to state 46

    $default  reduce using rule 11 (expressions)


State 87

   21 case: CASE INT_LITERAL ARROW statement • ';'

    ';'  shift, and go to state 89


State 88

   18 statement: SWITCH expression IS cases OTHERS ARROW statement ';' • ENDSWITCH

    ENDSWITCH  shift, and go to state 90


State 89

   21 case: CASE INT_LITERAL ARROW statement ';' •

    $default  reduce using rule 21 (case)


State 90

   18 statement: SWITCH expression IS cases OTHERS ARROW statement ';' ENDSWITCH •

    $default  reduce using rule 18 (statement)
